Refs #250 -- Keep payment deadlines on weekdays

--- a/src/pretix/control/templates/pretixcontrol/event/payment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/payment.html
@@ -8,6 +8,7 @@
 			<legend>{% trans "Payment settings" %}</legend>
             {% bootstrap_field sform.payment_term_days layout="horizontal" %}
             {% bootstrap_field sform.payment_term_last layout="horizontal" %}
+            {% bootstrap_field sform.payment_term_weekdays layout="horizontal" %}
             {% bootstrap_field sform.payment_term_expire_automatically layout="horizontal" %}
             {% bootstrap_field sform.payment_term_accept_late layout="horizontal" %}
             {% bootstrap_field sform.tax_rate_default layout="horizontal" %}
