remove javascript URIs for CSP Issue 155
Combining js error handling files.

--- a/src/pretix/base/templates/500.html
+++ b/src/pretix/base/templates/500.html
@@ -8,7 +8,7 @@
     <p>{% trans "If this problem persists, please contact us." %}</p>
     <p>{{ exception }}</p>
     <p class="links">
-        <a href="javascript:history.back()">{% trans "Take a step back" %}</a>
-        &middot; <a href="javascript:location.reload()">{% trans "Try again" %}</a>
+        <a id='goback' href='#'>{% trans "Take a step back" %}</a>
+        &middot; <a id='reload' href='#'>{% trans "Try again" %}</a>
     </p>
 {% endblock %}
