remove javascript URIs for CSP
#155

--- a/src/pretix/base/templates/error.html
+++ b/src/pretix/base/templates/error.html
@@ -16,4 +16,6 @@
     {% block content %}{% endblock %}
 </div>
 </body>
+<script src="{% static "pretixbase/js/goback.js" %}"></script>
+<script src="{% static "pretixbase/js/reload.js" %}"></script>
 </html>
