--- a/src/static/pretixcontrol/scss/_forms.scss
+++ b/src/static/pretixcontrol/scss/_forms.scss
@@ -14,6 +14,10 @@ td > .form-group > .checkbox {
   margin-bottom: 0;
 }
 
+.static-form-row {
+  padding-top: 7px;
+}
+
 .has-success .form-control {
   border-color: #cccccc;
 }
