--- a/src/pretix/control/templates/pretixcontrol/user/2fa_main.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_main.html
@@ -58,6 +58,8 @@
                     </a>
                     {% if d.devicetype == "totp" %}
                         <span class="fa fa-mobile"></span>
+                    {% elif d.devicetype == "u2f" %}
+                        <span class="fa fa-usb"></span>
                     {% endif %}
                     {{ d.name }}
                 </li>
