--- a/src/pretix/control/templates/pretixcontrol/user/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/user/settings.html
@@ -35,6 +35,15 @@
                 {% endif %}
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-md-3 control-label" for="id_new_pw_repeat">{% trans "Account history" %}</label>
+            <div class="col-md-9 static-form-row">
+                <a href="{% url "control:user.settings.history" %}">
+                    <span class="fa fa-history"></span>
+                    {% trans "Show account history" %}
+                </a>
+            </div>
+        </div>
     </fieldset>
     <div class="form-group submit-group">
         <button type="submit" class="btn btn-primary btn-save">
