--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -19,6 +19,9 @@
             {% bootstrap_field form.invoice_footer_text layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
+            <button type="submit" class="btn btn-default btn-lg" name="preview" value="preview" formtarget="_blank">
+                {% trans "Save and show preview" %}
+            </button>
             <button type="submit" class="btn btn-primary btn-save">
                 {% trans "Save" %}
             </button>
