Add context variables to sendmail plugin. Add email preview #173

--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
@@ -19,7 +19,7 @@
                         {{ request.POST.subject_0 }}
                     </p>
                     <p>
-                        {{ request.POST.message_0 }}
+                        {{ preview_text|linebreaksbr }}
 
                     </p>
                 </div>
