Add context variables to sendmail plugin. Add email preview for multiple locales #173

--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
@@ -15,13 +15,16 @@
             <legend>{% trans "E-mail preview" %}</legend>
 
                 <div class="panel-body">
+                    {% for k,v in output.items %}
                     <p>
-                        {{ request.POST.subject_0 }}
+                        <strong>For locale: </strong>{{ k }}
                     </p>
-                    <p>
-                        {{ preview_text|linebreaksbr }}
-
-                    </p>
+                        {% for value in v %}
+                        <p>
+                            {{ value|linebreaksbr }}
+                        </p>
+                        {% endfor %}
+                    {% endfor %}
                 </div>
             </fieldset>
             {% endif %}
