--- a/src/static/pretixcontrol/scss/_variables.scss
+++ b/src/static/pretixcontrol/scss/_variables.scss
@@ -4,6 +4,8 @@ $gray: lighten(#000, 33.5%);
 $gray-light: lighten(#000, 60%);
 $gray-lighter: lighten(#000, 93.5%);
 $gray-lightest: lighten(#000, 97.25%);
+$font-family-sans-serif:  "Open Sans", "OpenSans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-path: static("fonts");
 $brand-primary: #8E44B3;
 $brand-success: #5cb85c;
 $brand-info: #5bc0de;
