add open sans webfont #182

--- a/src/static/pretixcontrol/scss/main.scss
+++ b/src/static/pretixcontrol/scss/main.scss
@@ -1,6 +1,7 @@
 @import "_variables.scss";
 @import "../../bootstrap/scss/_bootstrap.scss";
 $fa-font-path: static("fontawesome/fonts");
+$font-path: static("fonts");
 @import "../../fontawesome/scss/font-awesome.scss";
 @import "../../typeahead/typeahead.css";
 @import "../css/metisMenu.min.css";
