--- a/src/static/pretixpresale/scss/main.scss
+++ b/src/static/pretixpresale/scss/main.scss
@@ -1,6 +1,7 @@
 @import "../../pretixbase/scss/colors.scss";
 @import "../../bootstrap/scss/_bootstrap.scss";
 $fa-font-path: static("fontawesome/fonts");
+$font-path: static("fonts");
 @import "../../fontawesome/scss/font-awesome.scss";
 
 @import "_event.scss";
