--- a/src/static/bootstrap/scss/bootstrap/_type.scss
+++ b/src/static/bootstrap/scss/bootstrap/_type.scss
@@ -8,6 +8,7 @@
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-path: $font-path;
   font-family: $headings-font-family;
   font-weight: $headings-font-weight;
   line-height: $headings-line-height;
