add context variables to sendmail plugin, and email preview for multiple locales #173

--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
@@ -15,11 +15,11 @@
             <legend>{% trans "E-mail preview" %}</legend>
 
                 <div class="panel-body">
-                    {% for k,v in output.items %}
+                    {% for locale, segments in output.items %}
                     <p>
-                        <strong>For locale: </strong>{{ k }}
+                        <strong>{% blocktrans %}For locale: {{ locale }}{% endblocktrans %}</strong>
                     </p>
-                        {% for value in v %}
+                        {% for value in segments %}
                         <p>
                             {{ value|linebreaksbr }}
                         </p>
