Added copying multiple tickets answers enhancement (#149)

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -41,6 +41,11 @@
                     </div>
                 </div>
             {% endif %}
+            <div id="cp_copy" class="panel panel-default">
+                <div class="panel-body">
+                    <input type="checkbox" name="copy" id="copy_answers">  Copy Answers
+                </div>                
+            </div>
             {% for form in forms %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
