--- a/src/pretix/control/templates/pretixcontrol/global_settings.html
+++ b/src/pretix/control/templates/pretixcontrol/global_settings.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans "Global settings" %}{% endblock %}
 {% block content %}
     <h1>{% trans "Global settings" %}</h1>
-    <form action="" method="post" class="form-horizontal">
+    <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
         {% csrf_token %}
         {% bootstrap_form_errors form %}
         {% bootstrap_form form layout='horizontal' %}
